[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/gui/CreditsButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/gui/main_menu.gd" type="Script" id=4]
[ext_resource path="res://scripts/gui/hud.gd" type="Script" id=5]
[ext_resource path="res://scenes/gui/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/gui/GameOverMenu.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Game Over"
tracks/0/type = "value"
tracks/0/path = NodePath("../MessagePanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, -225 ), Vector2( 72, 185 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameOverMenu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, -250 ), Vector2( 72, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../GameOverMenu/HBoxContainer/PlayAgainButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../GameOverMenu/HBoxContainer/QuitToMainMenuButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../GameOverMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 72, 239 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="HighScoreLabel" type="RichTextLabel" parent="."]
margin_top = 27.0
margin_right = 480.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]High Score:  99999999[/center]"
text = "High Score:  99999999"
__meta__ = {
"_editor_description_": ""
}

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 67.0
margin_right = 480.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Score:  0000000"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="MainMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -190.0
margin_bottom = -160.0
theme = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]Dodge The Creeps
Reloaded[/center]"
text = "Dodge The Creeps
Reloaded"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 287.0
margin_right = -71.0
margin_bottom = -125.0
custom_constants/separation = 50

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 338.0
margin_bottom = 69.0
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Play"
icon_align = 1

[node name="CreditsButton" parent="MainMenu/VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 119.0
margin_right = 338.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_align = 1

[node name="QuitToDesktopButton" parent="MainMenu/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 238.0
margin_right = 338.0
margin_bottom = 308.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../PlayButton")
size_flags_horizontal = 3
size_flags_vertical = 3
icon_align = 1

[node name="VersionLabel" type="Label" parent="MainMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0
margin_bottom = -24.0
theme = ExtResource( 2 )
text = "Version 1.0"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverMenu" parent="." instance=ExtResource( 8 )]
theme = ExtResource( 2 )

[node name="MessagePanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -84.0
margin_right = 169.0
margin_bottom = -20.0001
mouse_filter = 2
size_flags_vertical = 4
__meta__ = {
"_editor_description_": ""
}

[node name="MessageLabel" type="Label" parent="MessagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Message Label"
align = 1
valign = 1
autowrap = true

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MainMenu")
"anims/Game Over" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]

[editable path="GameOverMenu"]
